# hammock

./: .gitignore  .pylintrc  Dockerfile.build  MANIFEST.in  Makefile  NOTICE  README.md  artifacts.yaml  convert.bash  dev-requirements.txt  requirement.txt  requirements.txt  setup.cfg  setup.py  skipper.yaml  tox.ini
examples/files/: ab-falcon.sh  ab-hammock.sh  client.sh  falcon.sh  hammock.sh  install.sh  uwsgi-falcon.yml  uwsgi.yml
examples/phoenix/: .gitignore  MANIFEST.in  Makefile  client_setup.py  dev-requirements.txt  requirements.txt  setup.cfg  setup.py  tox.ini
hammock/: __init__.py  api.py  client.py  common.py  converters.py  decorator.py  doc.py  exceptions.py  headers.py  mock_import.py  names.py  packages.py  passthrough.py  policy.py  proxy.py  public_address_provider.py  redirect.py  request.py  resource.py  resource_node.py  response.py  route.py  sink.py  strato_zipkin.py  swaggerize.py  types.py
hammock/backends/: __init__.py  _aweb.py  _falcon.py  aweb.py  backend.py  falcon.py
hammock/cli/: __init__.py  app.py  colors.py  command.py  command_manager.py  flatten.py  (+1 more)
tests/: aiohttp.py  app.py  app_policy.py  aweb.py  base.py  identity_v3_responses.json  policy.json  policy_example.json  server.py  test_argument_types.py  test_cli.py  test_client.py  test_client_get_route.py  test_exceptions.py  test_flatten.py  test_func_spec.py  test_keyword_map.py  test_patterns.py  test_policy.py  test_public_address_provider.py  test_redirect.py  test_resource.py  test_streams.py  test_uwsgi.py  test_uwsgi_policy.py  test_whitebox_uwsgi.py  uwsgi_base.py
(+96 files in other folders)
