[metadata]
name = hammock-rest
author = Eyal Posener
author-email = eyal@stratoscale.com
summary = A good place to REST
description-file = README.md
homepage = https://github.com/Stratoscale/hammock
license = Apache License 2.0
keywords =
    REST
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
    Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware

[files]
packages =
    hammock

[flake8]
max-line-length=145
jobs=auto

[coverage:run]
omit = 
    *__init__*
    *.j2
    tests*
source = hammock

[coverage:report]
show_missing = True
fail_under = 50

[coverage:html]
directory = build/unittest-coverage-html

[coverage:xml]
output = build/unittest-coverage.xml
